added formatting (indentation) to HTML and handlebars files; added navbar to userPage.html

--- a/public/html/userPage.html
+++ b/public/html/userPage.html
@@ -12,6 +12,26 @@
 
     <div class="container">
 
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nbar">
+                    
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav m-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>        
+
         <div class="row">
             <div class="item card text-white bg-primary mb-3" style="max-width: 18rem;">
                 <div class="card-header">I did something to enrich my life!</div>
