--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,7 +5,7 @@
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/public/styles/styles.css">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
