--- a/public/html/newPostForm.html
+++ b/public/html/newPostForm.html
@@ -13,6 +13,36 @@
 
     <div class="container">
 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nbar">                    
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav m-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Post</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+
+        <div id ="searchBar">
+            <form class="form-inline my-2 my-lg-0" id="searchBar">
+                <input class="form-control mr-sm-2" type="search"  aria-label="Search">
+                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit" id="searchButt">Search</button>
+            </form>
+        </div>
+
         <form id="newPostForm">
             <div class="form-group">
                 <label for="exampleFormControlInput1">Headline</label>
