added register button on login

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -63,6 +63,9 @@
                                     <input type ="password" class = "form-control" placeholder ="Password">
                                 </div>
                                 <div class="g-signin2" data-onsuccess="onSignIn"></div>
+                                <div id="signupButt">
+                                    <button type="button" class="btn btn-secondary">Register</button>
+                                </div>
                             </form>
                         </div>
                         <div class ="col-12 link-part">
