--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,7 +5,7 @@
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-    <link rel="stylesheet" href="/public/styles/styles.css">
+    <link rel ="stylesheet" href="../styles/styles.css">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
@@ -49,7 +49,7 @@
                 <div class ="col-sm-8 main-section">
                     <div class = "modal-content">
                         <div class = "col-12 user-img">
-                            <img src = "./styles/images/rsz_user_avatar_2.png">
+                            <img src = "../styles/images/rsz_user_avatar_2.png">
                         </div>
                         <div class ="col-12 user-name">
                             <h1>uWell</h1>
