--- a/public/html/index.html
+++ b/public/html/index.html
@@ -62,10 +62,12 @@
                                 <div class ="form-group">
                                     <input type ="password" class = "form-control" placeholder ="Password">
                                 </div>
-                                <div class="g-signin2" data-onsuccess="onSignIn"></div>
                                 <div id="signupButt">
                                     <button type="button" class="btn btn-secondary">Register</button>
                                 </div>
+                                <div id="googButt">
+                                    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+                                    </div>
                             </form>
                         </div>
                         <div class ="col-12 link-part">
