forgot what I edited

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -93,7 +93,7 @@
                     </div>
                     <p class="mb-1">Worked on group project.Worked on group project.Worked on group project.Worked on group project.</p>
                     <div id="likeSect">
-                        <i class="far fa-thumbs-up"></i>
+                        <button><i class="far fa-thumbs-up"></i></button>
                         <span id="numLikes"># of likes</span>
                     </div>
                 </a>
